--- a/app/templates/record.html
+++ b/app/templates/record.html
@@ -77,7 +77,7 @@
                         </div>
 
 
-                        <a class="mouse-scroll" href="/stop"> 
+                        <a class="mouse-scroll" href="/"> 
                             <span class="mouse">
                                 <span class="mouse-movement"></span>
                             </span>
