--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,7 @@
 <html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Synergy</title>
+        <title>Synalyze</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 		
@@ -39,7 +39,7 @@
                             <div class="hello">
                                 <div class="slid_item">
                                    <div class="home_text ">
-                                        <h1 class="text-yellow">Welcome to Synergy</h1>
+                                        <h1 class="text-yellow">Welcome to Synalyze</h1>
                                             <h3 class="text-white text-uppercase">We Perform Analysis on Business Meetings </h3>
                                     </div>
                                 </div><!-- End off slid item -->
