--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -62,13 +62,16 @@
         <script src="../static/js/bootstrap.min.js"></script>
         <script src="../static/js/audiodisplay.js"></script>
         <script src="../static/js/recorderjs/recorder.js"></script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
 
         <script>
-            jQuery( document ).ready( function ( $ ) {
-                //for Preloader
-                $( window ).load( function () {
-                    $( "#loading" ).fadeOut( 500 );
-                }); 
+            jQuery(document).ready(function($) {
+                $(window).load(function() {
+                    $("#loading").fadeOut( 500 );
+                });
+
+                var socket = io.connect('http://' + document.domain + ':' + location.port + '/test');
+                socket.emit('test', {data: 'emit_data'}); 
             });
         </script>
         <script src="../static/js/mic.js"></script>
