Created site flow

--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -13,16 +13,12 @@
                     <div class="hello">
                         <div class="slid_item">
                            <div class="home_text ">
-                                <h1 class="text-yellow">Welcome to Synalyze</h1>
-                                    <h3 class="text-white text-uppercase">We Perform Analysis on Business Meetings </h3>
+                                <h1 class="text-yellow">Report</h1>
+                                    <h3 class="text-white text-uppercase">TEMPORARY CRAP</h3>
                             </div>
                         </div><!-- End off slid item -->
-                    </div>
-                </div>
 
-                <div class="col-md-12">
-                    <div class="col-md-6" id="controls">
-                        <a type="button" class="btn btn-warning" href="{{ url_for('record') }}">Record</a>
+                        <img src="https://scontent.fsjc1-3.fna.fbcdn.net/v/t1.0-9/12189979_558823910936882_5534481478435088436_n.jpg?oh=22f02a0ade6911a2a3679cddf0fb441d&oe=59A26306">
                     </div>
                 </div>
             </div>
