--- a/app/templates/record.html
+++ b/app/templates/record.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="main_home text-center">
                 <div class="col-md-12">
-                    <div class="col-md-6" id="controls">
+                    <div class="col-md-6 col-md-offset-3" id="controls">
                         <button type="button" class="btn btn-warning" id="stop">Analyze</button>
                     </div>
                 </div>
