--- a/app/templates/report.html
+++ b/app/templates/report.html
@@ -1,111 +1,91 @@
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+{% extends "base.html" %}
 
-		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-		<!--[if lt IE 9]>
-			<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
+{% block header %}
+    <style type="text/css">
+		.circle_green { 
+			width:1%;
+			padding:10px 11px;
+			margin:0 auto;
+			border-radius:100%;
+			background-color:green;
+		}
+	</style>
 
-		<title>{{ data["title"] }}</title>
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.6.0/rickshaw.min.css" />
+	<link href="../static/css/agency.min.css" rel="stylesheet">
+{% endblock %}
 
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js"
-		  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-		  crossorigin="anonymous"></script>
-
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.6.0/rickshaw.min.css" />
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.6.0/rickshaw.min.js"></script>
-
-		<style type="text/css">
-			.circle_green { 
-				width:1%;
-				padding:10px 11px;
-				margin:0 auto;
-				border-radius:100%;
-				background-color:green;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="container" class="container">
-			<div class="page-header">
-				<h1>{{ data["topic"] }}</h1>
-				<p class="lead">From {{ data["date_str"] }} and lasted {{ data["dur_str"] }}</p>
-			</div>
-
-			<h2>Main Ideas</h2>
-			<ul style="list-style: none;">
-				{% for idea in data["ideas"] %}
-				<li>
-					<h3>{{ idea }}</h3>
-				</li>
-				{% endfor %}
-			</ul>
-
-			<div id="chart"></div>
-
-				<h2>People</h2>
-				<table style="border-collapse: separate;border-spacing: 10px;">
-					<tr>
-						<td>Speaker</td>
-						<td>Duration (% Overall)</td>
-					</tr>
-					{% for i in range(data["overall_speaker"]|length) %}
-					<tr>
-						<td>{{  data["overall_speaker"][i]  }}</td>
-						<td>{{ data["overall_durations"][i] }}</td>
-					</tr>
-					{% endfor %}
-				</table>
-
-				<h2>Transcript</h2>
-				<table style="border-collapse: separate;border-spacing: 10px;">
-					{% for i in range(data["speakers"]|length) %}
-					<tr style="vertical-align:top;">
-						<td>{{ data["speakers"][i] }}</td>
-						<td>{{ data["start_times"][i] }}</td>
-						<td><div class="circle_green"></td>
-						<td><p>({{ '%.02f' % data["durations"][i] }} s): {{ data["text"][i] }} </p></td>
-					</tr>
-					{% endfor %}
-				</table>
+{% block content %}
+	<div id="container" class="container">
+		<div class="page-header">
+			<h1>{{ data["topic"] }}</h1>
+			<p class="lead">From {{ data["date_str"] }} and lasted {{ data["dur_str"] }}</p>
 		</div>
-		
-		<script>
-			var graph = new Rickshaw.Graph( {
-				element: document.getElementById("chart"),
-				width: document.getElementById('container').offsetWidth,
-				height: 200,
-				renderer: 'line',
-				min: -.01,
-				interpolation: 'basis',
-				series: [
-					{
-					data: [ {{ series1_str }} ],
-					color: '#ff0000'
-					}, {
-					data: [ {{ series2_str }} ],
-					color: '#0000ff'
-					}, {
-					data: [ {{ series3_str }} ],
-					color: '#00ff00'
-					}
-					]
-			} );
-			graph.render();
-		</script>
-	</body>
-</html>
+
+		<h2>Main Ideas</h2>
+		<ul style="list-style: none;">
+			{% for idea in data["ideas"] %}
+			<li>
+				<h3>{{ idea }}</h3>
+			</li>
+			{% endfor %}
+		</ul>
+
+		<div id="chart"></div>
+			<h2>People</h2>
+			<table style="border-collapse: separate;border-spacing: 10px;">
+				<tr>
+					<td>Speaker</td>
+					<td>Duration (% Overall)</td>
+				</tr>
+				{% for i in range(data["overall_speaker"]|length) %}
+				<tr>
+					<td>{{  data["overall_speaker"][i]  }}</td>
+					<td>{{ data["overall_durations"][i] }}</td>
+				</tr>
+				{% endfor %}
+			</table>
+	
+			<h2>Transcript</h2>
+			<table style="border-collapse: separate;border-spacing: 10px;">
+				{% for i in range(data["speakers"]|length) %}
+				<tr style="vertical-align:top;">
+					<td>{{ data["speakers"][i] }}</td>
+					<td>{{ data["start_times"][i] }}</td>
+					<td><div class="circle_green"></td>
+					<td><p>({{ '%.02f' % data["durations"][i] }} s): {{ data["text"][i] }} </p></td>
+				</tr>
+				{% endfor %}
+			</table>
+	</div>
+	
+	<script>
+		var graph = new Rickshaw.Graph( {
+			element: document.getElementById("chart"),
+			width: document.getElementById('container').offsetWidth,
+			height: 200,
+		renderer: 'line',
+			min: -.01,
+			interpolation: 'basis',
+			series: [
+				{
+				data: [ {{ series1_str }} ],
+				color: '#ff0000'
+				}, {
+				data: [ {{ series2_str }} ],
+			color: '#0000ff'
+				}, {
+				data: [ {{ series3_str }} ],
+				color: '#00ff00'
+				}
+				]
+		} );
+		graph.render();
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/rickshaw/1.6.0/rickshaw.min.js"></script>
+	
+{% endblock %}
