Added SQLite DB

--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -20,6 +20,10 @@
   font-family: 'zocial', sans-serif;
 }
 
+body {
+	background-color: #2F4F4F
+}
+
 .form-signin{
   max-width: 330px;
   padding: 15px;
