--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -12,29 +12,23 @@
     <div class="container text-center">
         <form class="form-signin" data-ember-action="2">
             <h2 class="form-signin-heading">Sign in</h2>
-
-            <small class="text-muted">Connect [your service] with your favorite social network</small>
             <br><br>    
             <p>
                 <a class="btn btn-primary social-login-btn social-facebook" href="/auth/facebook"><i class="fa fa-facebook"></i></a>
-                <a class="btn btn-primary social-login-btn social-twitter" href="/auth/twitter"><i class="fa fa-twitter"></i></a>
-            </p>
-            <p>
-              <a class="btn btn-primary social-login-btn social-linkedin" href="/auth/linkedin"><i class="fa fa-linkedin"></i></a>
               <a class="btn btn-primary social-login-btn social-google" href="/auth/google"><i class="fa fa-google-plus"></i></a>
             </p>
-
-            <small class="text-muted">Or sign in with [your service]</small>
-              <br><br>
+            <br><br>
                 
-              <input id="ember360" class="ember-view ember-text-field form-control login-input" placeholder="Email Address" type="text">
-              <input id="ember361" class="ember-view ember-text-field form-control login-input-pass" placeholder="Password" type="password">
+            <input id="ember360" class="ember-view ember-text-field form-control login-input" placeholder="Email Address" type="text">
+            <input id="ember361" class="ember-view ember-text-field form-control login-input-pass" placeholder="Password" type="password">
 
-              <script id="metamorph-22-start" type="text/x-placeholder"></script><script id="metamorph-22-end" type="text/x-placeholder"></script>
+            <script id="metamorph-22-start" type="text/x-placeholder"></script><script id="metamorph-22-end" type="text/x-placeholder"></script>
 
-              <button class="btn btn-lg btn-primary btn-block btn-center" type="submit" data-bindattr-3="3">Sign in</button>
-            <br>
-            <small class="create-account text-muted">Dont have a [your service] or social network account? <button id="ember363" class="ember-view btn btn-sm btn-default"> Sign Up </button> </small>
+            <button class="btn btn-lg btn-primary btn-block btn-center" type="submit" data-bindattr-3="3">Sign in</button>
+          <br>
+          <small class="create-account text-muted">Dont have a social network account? 
+          <br>
+          <button id="ember363" class="ember-view btn btn-sm btn-default"> Sign Up </button> </small>
         </form>
     </div>
 </div>
