--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,26 +1,35 @@
 {% extends "base.html" %}
 
 {% block header %}
-    <link href="../static/css/agency.min.css" rel="stylesheet">
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" rel="stylesheet">
+<link href="../static/css/login.css" rel="stylesheet">
 {% endblock %}
 
 {% block content %}
-    <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="{{ url_for('record') }}">Start Analysis</a>
-            </div>
-        </div>
-    </nav>
+<div class="container">
+  <script id="metamorph-1-start" type="text/x-placeholder"></script><script id="metamorph-21-start" type="text/x-placeholder"></script>
 
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="intro-text">
-                <div class="intro-lead-in">We Perform Analysis on Business Meetings</div>
-                <div class="intro-heading">Welcome To Synalyze!</div>
-                <a href="{{ url_for('record') }}" class="page-scroll btn btn-xl">Record</a>
-            </div>
-        </div>
-    </header>
-{% endblock %}
+    <div class="container text-center">
+        <form class="form-signin" data-ember-action="2">
+            <h2 class="form-signin-heading">Sign in</h2>
+            <br><br>    
+            <p>
+                <a class="btn btn-primary social-login-btn social-facebook" href="/auth/facebook"><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-primary social-login-btn social-google" href="/auth/google"><i class="fa fa-google-plus"></i></a>
+            </p>
+            <br><br>
+                
+            <input id="ember360" class="ember-view ember-text-field form-control login-input" placeholder="Email Address" type="text">
+            <input id="ember361" class="ember-view ember-text-field form-control login-input-pass" placeholder="Password" type="password">
+
+            <script id="metamorph-22-start" type="text/x-placeholder"></script><script id="metamorph-22-end" type="text/x-placeholder"></script>
+
+            <button class="btn btn-lg btn-primary btn-block btn-center" type="submit" data-bindattr-3="3">Sign in</button>
+          <br>
+          <small class="create-account text-muted">Dont have a social network account? 
+          <br>
+          <button id="ember363" class="ember-view btn btn-sm btn-default"> Sign Up </button> </small>
+        </form>
+    </div>
+</div>
+{% endblock content %}
