Got FB authorization

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,8 +14,8 @@
             <h2 class="form-signin-heading">Sign in</h2>
             <br><br>    
             <p>
-                <a class="btn btn-primary social-login-btn social-facebook" href="/auth/facebook"><i class="fa fa-facebook"></i></a>
-              <a class="btn btn-primary social-login-btn social-google" href="/auth/google"><i class="fa fa-google-plus"></i></a>
+                <a class="btn btn-primary social-login-btn social-facebook" href="/authorize/facebook"><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-primary social-login-btn social-google" href="/authorize/google"><i class="fa fa-google-plus"></i></a>
             </p>
             <br><br>
                 
