--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,6 +27,18 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js" integrity="sha384-mE6eXfrb8jxl0rzJDBRanYqgBxtJ6Unn4/1F7q4xRRyIw7Vdg9jP4ycT7x1iVsgb" crossorigin="anonymous"></script>
         <script src="../static/js/agency.min.js"></script>
 
+        <nav id="mainNav" class="navbar navbar-default navbar-custom navbar-fixed-top">
+            <div class="container col-md-12">
+                <div class="navbar-header page-scroll col-md-6">
+                    <a class="navbar-brand page-scroll" href="{{ url_for('landing') }}">Synalyze</a>
+                </div>
+
+                <div class="navbar-header page-scroll col-md-6">
+                    <a class="navbar-brand page-scroll pull-right" href="{{ url_for('logout') }}">Logout</a>
+                </div>
+            </div>
+        </nav>
+
         {% block content %} {% endblock %}
     </body>
 
